fixed gap

--- a/src/components/widgets/AboutUs/Reviews/Review/User/User.module.scss
+++ b/src/components/widgets/AboutUs/Reviews/Review/User/User.module.scss
@@ -5,6 +5,14 @@
   gap: 24px;
 }
 
+.info {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
 .photo {
   position: relative;
   width: 48px;
